--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,41 @@
-version: "3.8"
+version: '3.8'
 
 services:
   bot:
     build: .
     container_name: binance_bot
-    restart: always
-    env_file: .env
     volumes:
-      - ./app:/app  # Монтируем ТОЛЬКО папку appdocker-compose up --build -d
+      - ./logs:/app/logs
+    restart: always
+    command: python app/bot.py
+
+  flask:
+    build: .
+    container_name: flask_app
+    environment:
+      - PYTHONPATH=/app
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./logs:/app/logs
+    depends_on:
+      - bot
+    restart: always
+    command: python app/flask_app.py
+
+  mysql:
+    image: mysql:8.0
+    container_name: mysql_db
+    environment:
+      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_DATABASE: bot
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    restart: always
+
+volumes:
+  mysql_data:
